# SpeechLess

./: .gitignore  .pylintrc  CMakeLists.txt  LICENSE  MakeDataset.py  README.md  avsource.py  build.sh  evaluate.py  evaluate_qa.py  gui.py  makeEnv.sh  requirements.txt  setup.cfg  setup.py  train.py  train_qa.py
.github/ISSUE_TEMPLATE/: bug_report.md
data/: eval.txt  preprocess_dataset.py  preprocess_dataset_c.py  preprocess_dataset_qa.py  sources.txt
examples/: config.json  test.json  test.py
lastModel/: saved_model.pb
lastModel/variables/: variables.index
speechless/: __init__.py  audio_reader.py  director.py  downloader.py  editor.py  main.py  tfidf.py  transcription.py  utils.py
speechless/edit_context/: audio.py  common.py  video.py
speechless/nlp/: __init__.py  method.py  tokenization.py
speechless/processing/: tokenization.py
speechless/processing/analysis/: __init__.py  analysis.py  spectrogram.py  tfidf.py
speechless/readers/: audio.py  subtitles.py
speechless/utils/: cli.py  math.py
src/: Cutter.py  DatasetDownloader.py  Downloader.py  GenerateDataset.py  Optimizer.py  Transcription.py  main.py
src/Editor/: compile.sh  editor.c  transcoding.c
src/speechless/: benchmark.py  director.py  downloader.py  editor.py  transcription.py
src/speechless/edit_context/: __init__.py  audio.py  common.py
src/speechless/processing/: tokenization.py
src/speechless/processing/analysis/: __init__.py  analysis.py  bert_summarizer.py  spectrogram.py  tfidf.py
src/speechless/readers/: __init__.py  audio.py
src/speechless/utils/: cli.py  config.py  logging.py  math.py  storage.py
tests/: test.py
