[metadata]
name = SpeechLess
version = file: VERSION
author = Paweł Głomski, Tomasz Rusinowicz, Jan Dorniak
author_email = pavel.glomski@gmail.com, axontom.online@gmail.com, JanDorniak99@gmail.com
description = A tool for automated audio/video editing with speech processing capabilities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/Exepp/SpeechLess/
classifiers =
  Development Status :: 2 - Pre-Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Multimedia :: Video
  Topic :: Multimedia :: Sound/Audio

[options]
package_dir =
  = src
packages = find:
zip_safe = no
test_suite = tests
python_requires = >=3.6
install_requires =
  youtube-dl
  wget
  av
  pytsmod
  librosa
  deepspeech
  webvtt-py
  transformers
  gensim
  bert-extractive-summarizer
  spacy
  torch
  numpy

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  speechless = speechless.main:main
